force-app/main/default/objects/Before_Save_Multiple_Flow_Single_Update__c/Before_Save_Multiple_Flow_Single_Update__c.object-meta.xml
<CustomObject>
    <label>Before Save Multiple Flow Single Update</label>
    <nameField>
        <displayFormat>BSMFSU {000000}</displayFormat>
        <label>Before Save Multiple Flow Single Update Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Before Save Multiple Flow Single Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>