force-app/main/default/objects/Before_Save_Multiple_Flow_Single_Update__c/fields/Field_5__c.field-meta.xml
<CustomField>
    <fullName>Field_5__c</fullName>
    <label>Field 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>