force-app/main/default/objects/Before_Save_Multiple_Flow_Single_Update__c/fields/Field_To_Update__c.field-meta.xml
<CustomField>
    <fullName>Field_To_Update__c</fullName>
    <label>Field To Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>